--- a/shared/components/AppBarUser/AppBarUser.less
+++ b/shared/components/AppBarUser/AppBarUser.less
@@ -5,10 +5,7 @@
 @import "../../assets/buttons.less";
 
 .AppBarUser__login {
-  cursor: pointer;
-  font-weight: 400;
-  font-size: 14px;
-  color: @white-darker;
+  margin-right: 8px;
 }
 
 .AppBarUser__logout {
